<resources>
    <string name="app_name">MUNScore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="setscore">Enter score</string>
    <string name="save">Save</string>
    <string name="day_3">Day 3</string>
    <string name="day_2">Day 2</string>
    <string name="day_1">Day 1</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="results">Results</string>
    <string name="committee_stats">Committee Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countries_day_1">Countries day 1</string>
    <string name="countries_day_2">Countries day 2</string>
    <string name="countries_day_3">Countries day 3</string>
    <string name="title_activity_committee_stats">Committee Stats</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="please_fill_out_the_award_hierarchy">Please fill out the number of awards</string>
    <string name="best_delegate">Best Delegate</string>
    <string name="no_of_awards">No: of awards</string>
    <string name="high_commendation_outstanding_delegate">High commendation/ Outstanding delegate</string>
    <string name="special_mention">Special mention</string>
    <string name="committee_name">Committee</string>
    <string name="calculate_result">Calculate Result</string>
    <string name="title_activity_country_result_details">CountryResultDetails</string>
</resources>
