<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="23dp"
            android:text="@string/please_fill_out_the_award_hierarchy"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="27dp"
            android:text="@string/best_delegate"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/best_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/no_of_awards"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/high_commendation_outstanding_delegate"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_below="@+id/best_del"
            android:layout_alignLeft="@+id/best_del"
            android:layout_alignStart="@+id/best_del" />

        <EditText
            android:id="@+id/high_comm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/no_of_awards"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/high_comm"
            android:layout_alignStart="@+id/high_comm"
            android:layout_below="@+id/high_comm"
            android:layout_marginTop="27dp"
            android:text="@string/special_mention"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/spec_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/no_of_awards"
            android:inputType="number" />

        <Button
            android:id="@+id/cal_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spec_men"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="26dp"
            android:text="@string/calculate_result" />

    </RelativeLayout>

</ScrollView>
